- update news content 2/5

--- a/src/en/news/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi-en.ejs
+++ b/src/en/news/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi-en.ejs
@@ -9,13 +9,13 @@
   <meta property="og:type" content="article" />
   <meta property="og:title" content="6 STEPS IN FORMULATING LIVESTOCK FEED" />
   <meta property="og:description"
-    content="Công thức thức ăn vẫn còn là một bí ẩn không chỉ đối với hầu hết sinh viên mới ra trường mà ngay cả đối với một số chuyên gia, những người đôi khi mới đụng chạm đến vấn đề này." />
+    content="Formulating feed remains a mystery not only to most fresh graduates but also to some experts who may have only recently encountered this issue." />
   <meta property="og:url" content="/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi-en/" />
   <meta property="og:site_name" content="" />
   <meta property="article:section" content="LIVESTOCK KNOWLEDGE" />
-  <meta property="article:published_time" content="2018-06-20T03:50:49+00:00" />
-  <meta property="article:modified_time" content="2018-06-22T08:13:19+00:00" />
-  <meta property="og:updated_time" content="2018-06-22T08:13:19+00:00" />
+  <meta property="article:published_time" content="2020-06-20T03:50:49+00:00" />
+  <meta property="article:modified_time" content="2020-06-22T08:13:19+00:00" />
+  <meta property="og:updated_time" content="2020-06-22T08:13:19+00:00" />
   <meta property="og:image" content="" />
   <meta property="og:image:secure_url"
     content="" />
@@ -23,7 +23,7 @@
   <meta property="og:image:height" content="260" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:description"
-    content="Công thức thức ăn vẫn còn là một bí ẩn không chỉ đối với hầu hết sinh viên mới ra trường mà ngay cả đối với một số chuyên gia, những người đôi khi mới đụng chạm đến vấn đề này." />
+    content="Formulating feed remains a mystery not only to most fresh graduates but also to some experts who may have only recently encountered this issue." />
   <meta name="twitter:title" content="6 STEPS IN FORMULATING LIVESTOCK FEED" />
   <meta name="twitter:image" content="" />
   <%- include('../../partial/head.ejs') %>
