--- a/src/partial/header.ejs
+++ b/src/partial/header.ejs
@@ -11,15 +11,16 @@
                   <i class="qode_icon_font_awesome fa fa-bars "></i> </span>
               </div>
               <div class="logo_wrapper">
-                <div class="q_logo">
+                <div class="q_logo" style="display: inline-block; float: left;">
                   <a itemprop="url" href="/">
                     <img itemprop="image" class="normal"
                       src="/assets/img/logo_notext.png" alt="Logo" />
                     <img itemprop="image" class="mobile"
                       src="/assets/img/logo_notext.png" alt="Logo" /> </a>
-                  <div class="clearfix">
-                    <p class="company-name">CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH</p>
-                  </div>
+                  
+                </div>
+                <div style="display: inline-block; line-height: 80px;">
+                  <p class="company-name">CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH</p>
                 </div>
               </div>
             </div>
@@ -129,15 +130,16 @@
                   <i class="qode_icon_font_awesome fa fa-bars "></i> </span>
               </div>
               <div class="logo_wrapper">
-                <div class="q_logo">
+                <div class="q_logo" style="display: inline-block; float: left;">
                   <a itemprop="url" href="/en/">
                     <img itemprop="image" class="normal"
                       src="/assets/img/logo_notext.png" alt="Logo" />
                     <img itemprop="image" class="mobile"
                       src="/assets/img/logo_notext.png" alt="Logo" /> </a> </a>
-                      <div class="clearfix">
-                        <p class="company-name">MINH ANH TECHNOLOGY INVESTMENT JOINT STOCK COMPANY</p>
-                      </div>
+                     
+                </div>
+                <div style="display: inline-block; line-height: 80px;">
+                  <p class="company-name">MINH ANH TECHNOLOGY INVESTMENT JOINT STOCK COMPANY</p>
                 </div>
               </div>
             </div>
