--- a/src/en/news-events.ejs
+++ b/src/en/news-events.ejs
@@ -154,7 +154,7 @@
                                     <div class="text_tintuc_detail">
                                       <h4>LIVESTOCK KNOWLEDGE</h4>
                                       <h3><a href="/en/news/dieu-chinh-che-do-dinh-duong-cho-heo-nai-en.html">ADJUSTING NUTRITION FOR SOWS DURING THE FARROWING TRANSITION PHASE</a></h3>
-                                      <p>Healthier piglets will contribute to increased profitability during the rearing process. Based on recent experiments and the results of implementing advanced nutrition programs, it has been confirmed that improving nutrition for piglets&#8230;</p>
+                                      <p>Piglets with better vitality will help increase profitability in the farming process. Based on recent experiments and the results of implementing an advanced nutrition program&#8230;</p>
                                       <a href="/en/news/dieu-chinh-che-do-dinh-duong-cho-heo-nai-en.html" class="button_learmore">Xem thêm</a>
                                     </div>
                                   </div>
