--- a/src/en/news/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi-en.ejs
+++ b/src/en/news/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi-en.ejs
@@ -54,7 +54,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="post_content_vietacc">
+                    <div class="post_content_minhanh">
                       <h3>6 STEPS IN FORMULATING LIVESTOCK FEED</h3>
                       <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 June | 2020
                       </div>
@@ -149,12 +149,12 @@
                               </div>
                               <div class="post-text">
                                 <div class="post-text_1">
-                                  <h4><a href="/news/dieu-chinh-che-do-dinh-duong-cho-heo-nai-en.html">ADJUSTING NUTRITION FOR SOWS DURING THE FARROWING TRANSITION PHASE
+                                  <h4><a href="/en/news/dieu-chinh-che-do-dinh-duong-cho-heo-nai-en.html">ADJUSTING NUTRITION FOR SOWS DURING THE FARROWING TRANSITION PHASE
 
                                   </a></h4>
                                   <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 June | 2020</div>
                                   <p>Healthier piglets will contribute to increased profitability during the rearing process. Based on recent experiments and the results of implementing advanced nutrition programs, it has been confirmed that improving nutrition for piglets&#8230;</p>
-                                  <div class="view_more_relasted"><a href="/news/dieu-chinh-che-do-dinh-duong-cho-heo-nai-en.html">Read more</a>
+                                  <div class="view_more_relasted"><a href="/en/news/dieu-chinh-che-do-dinh-duong-cho-heo-nai-en.html">Read more</a>
                                   </div>
                                 </div>
                               </div>
