--- a/src/en/partner.ejs
+++ b/src/en/partner.ejs
@@ -75,7 +75,7 @@
                                               srcset="/assets/img/doi-tac-chien-luoc/logo_massel.svg 300w, /assets/img/doi-tac-chien-luoc/logo_massel.svg 369w"
                                               sizes="(max-width: 300px) 100vw, 300px" /></p>
                                           <h3>MASSEL - AUSTRALIA</h3>
-                                          <p>In 2023, <strong>Minh Anh Group</strong> has officially become a strategic partner of Massel in distributing a range of products that are gluten-free, lactose-free, and free from animal fats, catering to vegetarians and vegans.</p>
+                                          <p>In 2023, <strong>MINH ANH GROUP</strong> has officially become a strategic partner of Massel in distributing a range of products that are gluten-free, lactose-free, and free from animal fats, catering to vegetarians and vegans.</p>
                                         </div>
                                       </div>
                                     </div>
