--- a/src/tin-tuc/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi.ejs
+++ b/src/tin-tuc/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi.ejs
@@ -53,7 +53,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="post_content_vietacc">
+                    <div class="post_content_minhanh">
                       <h3>Có thể cắt giảm hoặc thay thế vitamin E trong thức ăn chăn nuôi ?</h3>
                       <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng Sáu | 2020</div>
                       <div class="shadfresocial"><strong>Vitamin E có thể được thay thế hoặc tiết kiệm bằng cách sử dụng các chất chống oxy hóa khác, nhưng không bao giờ thay thế được hoàn toàn; bài viết này giải thích lý do vì sao vitamin E rất quan trọng đối với sức khỏe và sự tăng trưởng của động vật.</strong></div>
