--- a/src/tin-tuc/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con.ejs
+++ b/src/tin-tuc/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con.ejs
@@ -53,7 +53,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="post_content_vietacc">
+                    <div class="post_content_minhanh">
                       <h3>KIỂM SOÁT GIÁ TRỊ ĐỆM TRONG THỨC ĂN HEO CON</h3>
                       <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng Sáu | 2020</div>
                       <p><strong>Thực tiễn xây dựng khẩu phần thức ăn heo con hiện đại cần tính đến khả năng đệm của khẩu phần, mục tiêu kiểm soát khả năng đệm đạt dưới 650 meq/kg.</strong></p>
