--- a/src/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.ejs
+++ b/src/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.ejs
@@ -53,7 +53,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="post_content_vietacc">
+                    <div class="post_content_minhanh">
                       <h3>6 BƯỚC TRONG LẬP CÔNG THỨC THỨC ĂN CHĂN NUÔI</h3>
                       <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng Sáu | 2020
                       </div>
