- update content news detail

--- a/src/bat-dong-san.ejs
+++ b/src/bat-dong-san.ejs
@@ -46,7 +46,7 @@
                         <div class="wpb_wrapper">
                           <h2 class="title_header">DỰ ÁN BẤT ĐỘNG SẢN NHÀ ĐẤT VIỆT NAM 2023</h2>
                           <div class="br_line"><img src="/assets/img/bds/line.png" alt="icon line"></div>
-                          <div class="services_text"><p style="text-align: justify;">Tổng hợp danh sách các dự án bất động sản, dự án căn hộ chung cư giá rẻ, dự án cao cấp mới nhất 2021. Tại đây <span style="color:#ff0000;"><strong>
+                          <div class="services_text"><p style="text-align: justify;">Tổng hợp danh sách các dự án bất động sản, dự án căn hộ chung cư giá rẻ, dự án cao cấp mới nhất 2023. Tại đây <span style="color:#ff0000;"><strong>
                             CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH</strong></span> cung cấp đầy đủ tất cả thông tin về chủ đầu tư dự án, pháp lý, tiến độ xây dựng kèm theo bảng giá bán chi tiết của dự án nhà ở cập nhật mới nhất năm 2023.</p></div>
                           <div class="row">
                             <div class="col-md-4 col-sm-6 col-xs-12">
@@ -89,7 +89,7 @@
                                 </div>
                               </div>
                             </div>
-                            <div class="col-md-4 col-sm-6 col-xs-12">
+                            <!-- <div class="col-md-4 col-sm-6 col-xs-12">
                               <div class="single-property"> <span>Đang triển khai</span>
                                 <div class="property-img"> <a href="/bds/minh-anh-park-hill-cu-chi.html"><img
                                       src="/assets/img/bds/glory-heights-31-370x290.jpg" alt="Glory Heights "></a>
@@ -125,8 +125,8 @@
                                   </div>
                                 </div>
                               </div>
-                            </div>
-                            <div class="col-md-4 col-sm-6 col-xs-12">
+                            </div> -->
+                            <!-- <div class="col-md-4 col-sm-6 col-xs-12">
                               <div class="single-property"> <span>Đang triển khai xây dựng</span>
                                 <div class="property-img"> <a href="/bds/minh-anh-park-hill-cu-chi.html"><img
                                       src="/assets/img/bds/ecopark-nhon-trach-dong-nai-31-370x290.jpg"
@@ -163,7 +163,7 @@
                                   </div>
                                 </div>
                               </div>
-                            </div>
+                            </div> -->
                           </div>
                           <!-- <ul class="pagination-box">
                             <li class="active"><a class="active" href="javascript:void(0);">1</a></li>
@@ -187,7 +187,7 @@
 
         </div>
       </div>
-      <div class="hotline-phone-ring-wrap">
+      <!-- <div class="hotline-phone-ring-wrap">
         <div class="hotline-phone-ring">
           <div class="hotline-phone-ring-circle"></div>
           <div class="hotline-phone-ring-circle-fill"></div>
@@ -196,7 +196,7 @@
           </div>
         </div>
         <div class="hotline-bar"> <a href="tel:xxxxxxxx"><span class="text-hotline">xxxxxxxx</span></a> </div>
-      </div>
+      </div> -->
       <%- include('partial/footer.ejs', {lang: 'vi'}) %>
     </div>
   </div>
