--- a/src/en/news/dieu-chinh-che-do-dinh-duong-cho-heo-nai-en.ejs
+++ b/src/en/news/dieu-chinh-che-do-dinh-duong-cho-heo-nai-en.ejs
@@ -126,8 +126,8 @@
                           <ul>
                             <li>
                               <div class="Post-image">
-                                <a href="/en/news/dieu-chinh-che-do-dinh-duong-cho-heo-nai-en.html"
-                                  title="ADJUSTING NUTRITION FOR SOWS DURING THE FARROWING TRANSITION PHASE" thumbnail=""" ><img width="
+                                <a href="/en/news/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi-en.html"
+                                  title=""CAN VITAMIN E BE REDUCED OR REPLACED IN LIVESTOCK FEED ?" thumbnail=""" ><img width="
                                   792" height="618"
                                   src="/assets/img/tin-tuc/img_chuoi_1.jpg"
                                   class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt=""
@@ -137,12 +137,12 @@
                               <div class="post-text">
                                 <div class="post-text_1">
                                   <h4><a
-                                      href="/en/news/dieu-chinh-che-do-dinh-duong-cho-heo-nai-en.html">ADJUSTING NUTRITION FOR SOWS DURING THE FARROWING TRANSITION PHASE
+                                      href="/en/news/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi-en.html">CAN VITAMIN E BE REDUCED OR REPLACED IN LIVESTOCK FEED ?
                                     </a></h4>
                                   <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 June | 2020</div>
                                   <p>Vitamin E can be partially substituted or economized by using other antioxidants, but it can never be fully replaced; this article explains why vitamin E is crucial for&#8230;</p>
                                   <div class="view_more_relasted"><a
-                                      href="/en/news/dieu-chinh-che-do-dinh-duong-cho-heo-nai-en.html">Read more</a></div>
+                                      href="/en/news/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi-en.html">Read more</a></div>
                                 </div>
                               </div>
                             </li>
