- update image about page

--- a/src/bds/minh-anh-park-hill-cu-chi.ejs
+++ b/src/bds/minh-anh-park-hill-cu-chi.ejs
@@ -82,11 +82,9 @@
                                       <p
                                         style="line-height: 1.38; margin-top: 0pt; margin-bottom: 10pt; text-align: justify;">
                                         <span id="docs-internal-guid-7e342ecd-7fff-8871-8eff-3e620853fdd2"><span
-                                            style="font-size: 11pt; font-family: Arial; color: rgb(0, 0, 0); background-color: transparent; font-variant-numeric: normal; font-variant-east-asian: normal; font-variant-alternates: normal; vertical-align: baseline; white-space-collapse: preserve;">Minh Anh Park Hill Củ Chi - Dự án được triển khai với quy mô là một KĐT hiện đại; đẳng cấp do Minh Anh Group làm chủ đầu tư với tổng diện tích quy mô 116 ha toạ lạc tại cầu Bắc Luân II - thành phố Củ Chi - tỉnh Quảng Ninh.</span></span></p>
-                                      <p
-                                        style="line-height: 1.38; margin-top: 0pt; margin-bottom: 10pt; text-align: justify;">
-                                        <span id="docs-internal-guid-7e342ecd-7fff-8871-8eff-3e620853fdd2"><span
-                                            style="font-size: 11pt; font-family: Arial; color: rgb(0, 0, 0); background-color: transparent; font-variant-numeric: normal; font-variant-east-asian: normal; font-variant-alternates: normal; vertical-align: baseline; white-space-collapse: preserve;">Sự ra đời của dự án tạo cơn sốt trên thị trường BĐS khi đón đầu sự phát triển hạ tầng khi nằm ngay khu vực có lợi thế lớn về kinh tế chiến lược. Củ Chi từ trước tới nay là điểm trung chuyển và giao thương kinh tế - dịch vụ - du lịch kết nối giữa hai nước Việt - Trung. Tiềm năng sinh lời của các sản phẩm không giới hạn tạo điểm nhấn thu hút các nhà đầu tư trong khoảng thời gian sắp tới.</span></span></p>
+                                            style="font-size: 11pt; font-family: Arial; color: rgb(0, 0, 0); background-color: transparent; font-variant-numeric: normal; font-variant-east-asian: normal; font-variant-alternates: normal; vertical-align: baseline; white-space-collapse: preserve;"><strong>Minh Anh Park Hill</strong> của Công ty Cổ phần Đầu tư Công nghệ Minh Anh có diện tích khoảng 2,2 ha tọa lạc trên địa phận xã Hòa Phú, Huyện Củ Chi thuộc Thành phố Hồ Chí Minh. Theo quy hoạch, Minh Anh Park Hill sẽ là dự án tổ hợp dịch vụ, thương mại, văn hóa và vui chơi giải trí tại khu vực Tây Bắc Sài Gòn.
+                                          </span></span></p>
+                                      
                                       <div></div>
                                     </div>
                                 </div>
