--- a/src/en/about.ejs
+++ b/src/en/about.ejs
@@ -386,7 +386,50 @@
                   </div>
                 </div>
               </div>
-             
+              <div class="vc_row wpb_row section vc_row-fluid  nong_san_tho_row" style=' padding-top: 50px; text-align:left;'>
+                <div class=" full_section_inner clearfix">
+                  <div
+                    class="wpb_animate_when_almost_visible wpb_slideInLeft slideInLeft wpb_column vc_column_container vc_col-sm-6">
+                    <div class="vc_column-inner vc_custom_1527655478407">
+                      <div class="wpb_wrapper">
+                        <div class="wpb_single_image wpb_content_element vc_align_left   nong_san_img_1">
+                          <div class="wpb_wrapper">
+                            <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="994" height="902"
+                                src="/assets/img/gioi-thieu/organization_en.png"
+                                class="vc_single_image-img attachment-full" alt=""
+                                srcset="/assets/img/gioi-thieu/organization_en.png 994w, /assets/img/gioi-thieu/organization_en.png 300w, /assets/img/gioi-thieu/organization_en.png 768w, /assets/img/gioi-thieu/organization_en.png 700w"
+                                sizes="(max-width: 994px) 100vw, 994px" /></div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div
+                    class="wpb_animate_when_almost_visible wpb_slideInRight slideInRight wpb_column vc_column_container vc_col-sm-6" style="padding-bottom: 20px;">
+                    <div class="vc_column-inner vc_custom_1527655481830">
+                      <div class="wpb_wrapper">
+                        <div class="wpb_text_column wpb_content_element  nong_san_tho_text">
+                          <div class="wpb_wrapper">
+                            <h3>ORGANIZATIONAL STRUCTURE</h3>
+                            <p>Minh Anh Company is a technology investment joint-stock company with a professional and efficient organizational structure.</p>
+                            <p>The Board of Directors is responsible for supervising and directing the company's strategic development.</p>                          
+                            <p>The CEO leads the company with a strategic vision and strong leadership.</p>
+                          </br>
+                            <p>The Project Department is responsible for managing and implementing the company's projects.</p>
+                            <p>The Technical Department focuses on researching, developing, and applying advanced technologies.</p>
+                            <p>The Finance and Accounting Department ensures effective financial management and transparent financial reporting.</p>
+                            <p>The Sales Department builds strong relationships with partners and customers to develop the market.</p>
+                            <p>The Human Resources Department focuses on developing talented human resources and creating a favorable working environment.</p>
+                            <p>The Market Research Department provides valuable market analysis to shape business strategies.</p>
+                          </br>
+                            <p>With a professional organizational structure and the passion of our team, Minh Anh Company is confident in becoming a leading technology investment company, delivering high value to customers and shareholders.</p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>  
                
                 
                          
