--- a/src/gioi-thieu.ejs
+++ b/src/gioi-thieu.ejs
@@ -414,7 +414,8 @@
                             <p> Hội đồng quản trị chịu trách nhiệm giám sát và định hướng chiến lược phát triển.</p>                          
                             <p>Ban Tổng Giám đốc dẫn dắt công ty với tầm nhìn chiến lược và tinh thần lãnh đạo mạnh mẽ. </p>
                           </br>
-                            <p>Phòng Kỹ thuật tập trung vào nghiên cứu và ứng dụng công nghệ tiên tiến.</p>
+                            <p>Phòng Dự án chịu trách nhiệm quản lý và triển khai các dự án của công ty.</p>
+                            <p>Phòng Kỹ thuật tập trung vào nghiên cứu, phát triển và áp dụng các công nghệ tiên tiến.</p>
                             <p>Phòng Tài chính Kế toán đảm bảo quản lý tài chính hiệu quả và báo cáo tài chính minh bạch.</p>
                             <p>Phòng Kinh doanh xây dựng mối quan hệ chặt chẽ với đối tác và khách hàng để phát triển thị trường.</p>
                             <p>Phòng Nhân sự tập trung vào phát triển nguồn nhân lực tài năng và tạo môi trường làm việc thuận lợi.</p>
