- update en page

--- a/src/en/about.ejs
+++ b/src/en/about.ejs
@@ -411,7 +411,7 @@
                         <div class="wpb_text_column wpb_content_element  nong_san_tho_text">
                           <div class="wpb_wrapper">
                             <h3>ORGANIZATIONAL STRUCTURE</h3>
-                            <p>Minh Anh Company is a technology investment joint-stock company with a professional and efficient organizational structure.</p>
+                            <p>Minh Anh Group is a diversified investment corporation with a professional and efficient organizational structure.</p>
                             <p>The Board of Directors is responsible for supervising and directing the company's strategic development.</p>                          
                             <p>The CEO leads the company with a strategic vision and strong leadership.</p>
                           </br>
