--- a/src/en/product/nong-san-nguyen-lieu-tho-en.ejs
+++ b/src/en/product/nong-san-nguyen-lieu-tho-en.ejs
@@ -153,7 +153,7 @@
                             <p>&nbsp;</p>
                             <h3><strong>2. <b>VEGETABLE PROTEIN</b></strong></h3>
                             <p><img class="size-full wp-image-290 aligncenter"
-                                src="/assets/img/san-pham/1.-DDGS-e1529389972529.jpg"
+                                src="/assets/img/san-pham/BapHat.jpg"
                                 alt="" width="400" height="300" /><br />
                               With our extensive network, we diversify our plant protein products to meet the
                               plant&#8217;s production standards at the best prices.</p>
