--- a/src/en/project.ejs
+++ b/src/en/project.ejs
@@ -44,13 +44,13 @@
                     <div class="wpb_column vc_column_container vc_col-sm-12">
                       <div class="vc_column-inner ">
                         <div class="wpb_wrapper">
-                          <h2 class="title_header">DỰ ÁN BẤT ĐỘNG SẢN NHÀ ĐẤT VIỆT NAM 2023</h2>
+                          <h2 class="title_header">VIETNAM REAL ESTATE PROJECT 2023</h2>
                           <div class="br_line"><img src="/assets/img/bds/line.png" alt="icon line"></div>
-                          <div class="services_text"><p style="text-align: justify;">Tổng hợp danh sách các dự án bất động sản, dự án căn hộ chung cư giá rẻ, dự án cao cấp mới nhất 2021. Tại đây <span style="color:#ff0000;"><strong>
-                            CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH</strong></span> cung cấp đầy đủ tất cả thông tin về chủ đầu tư dự án, pháp lý, tiến độ xây dựng kèm theo bảng giá bán chi tiết của dự án nhà ở cập nhật mới nhất năm 2023.</p></div>
+                          <div class="services_text"><p style="text-align: justify;">Compilation of real estate projects, affordable apartment projects, and latest luxury projects in 2023. <span style="color:#ff0000;"><strong>
+                            MINH ANH TECHNOLOGY INVESTMENT JOINT STOCK COMPANY</strong></span> provides comprehensive information about the project's investors, legal aspects, construction progress, and detailed price list of the residential project with the latest update in 2023.</p></div>
                           <div class="row">
                             <div class="col-md-4 col-sm-6 col-xs-12">
-                              <div class="single-property"> <span>Đang triển khai</span>
+                              <div class="single-property"> <span>In progress</span>
                                 <div class="property-img"> <a
                                     href="/bds/minh-anh-park-hill-cu-chi.html"><img
                                       src="/assets/img/bds/vinhomes-golden-avenue-31-370x290.jpg"
@@ -58,15 +58,14 @@
                                   <div class="logo-caption"><span></span></div>
                                   <div class="property-desc-top">
                                     <h2><a class="name_product"
-                                        href="/bds/minh-anh-park-hill-cu-chi.html">Minh Anh Park Hill Củ Chi </a></h2>
+                                        href="/bds/minh-anh-park-hill-cu-chi.html">Minh Anh Park Hill </a></h2>
                                     <div class="property-location">
-                                      <p>Củ Chi</p>
+                                      <p>Cu Chi</p>
                                     </div>
                                   </div>
                                 </div>
                                 <div class="property-desc">
-                                  <p>Minh Anh Park Hill Củ Chi, siêu phẩm mới của chủ đầu tư Minh Anh triển khai xây
-                                    dựng tại khu...</p>
+                                  <p>Minh Anh Park Hill, The new masterpiece developed by Minh Anh Group is being implemented for construction...</p>
                                   <div class="property-desc-bottom">
                                     <div class="property-bottom-list">
                                       <ul>
@@ -79,17 +78,17 @@
                                   <div class="property-meta">
                                     <div class="row">
                                       <div class="col-md-6 col-sm-6 col-xs-6">
-                                        <div class="price">Đang cập nhật</div>
+                                        <div class="price">Updating </div>
                                       </div>
                                       <div class="col-md-6 col-sm-6 col-xs-6"> <a
-                                          href="/bds/minh-anh-park-hill-cu-chi.html">Xem chi tiết</a>
+                                          href="/bds/minh-anh-park-hill-cu-chi.html">Read more</a>
                                       </div>
                                     </div>
                                   </div>
                                 </div>
                               </div>
                             </div>
-                            <div class="col-md-4 col-sm-6 col-xs-12">
+                            <!-- <div class="col-md-4 col-sm-6 col-xs-12">
                               <div class="single-property"> <span>Đang triển khai</span>
                                 <div class="property-img"> <a href="/bds/minh-anh-park-hill-cu-chi.html"><img
                                       src="/assets/img/bds/glory-heights-31-370x290.jpg" alt="Glory Heights "></a>
@@ -125,8 +124,8 @@
                                   </div>
                                 </div>
                               </div>
-                            </div>
-                            <div class="col-md-4 col-sm-6 col-xs-12">
+                            </div> -->
+                            <!-- <div class="col-md-4 col-sm-6 col-xs-12">
                               <div class="single-property"> <span>Đang triển khai xây dựng</span>
                                 <div class="property-img"> <a href="/bds/minh-anh-park-hill-cu-chi.html"><img
                                       src="/assets/img/bds/ecopark-nhon-trach-dong-nai-31-370x290.jpg"
@@ -163,7 +162,7 @@
                                   </div>
                                 </div>
                               </div>
-                            </div>
+                            </div> -->
                           </div>
                           <!-- <ul class="pagination-box">
                             <li class="active"><a class="active" href="javascript:void(0);">1</a></li>
@@ -187,7 +186,7 @@
 
         </div>
       </div>
-      <div class="hotline-phone-ring-wrap">
+      <!-- <div class="hotline-phone-ring-wrap">
         <div class="hotline-phone-ring">
           <div class="hotline-phone-ring-circle"></div>
           <div class="hotline-phone-ring-circle-fill"></div>
@@ -196,7 +195,7 @@
           </div>
         </div>
         <div class="hotline-bar"> <a href="tel:xxxxxxxx"><span class="text-hotline">xxxxxxxx</span></a> </div>
-      </div>
+      </div> -->
       <%- include('../partial/footer.ejs', {lang: 'en'}) %>
     </div>
   </div>
