--- a/src/gioi-thieu.ejs
+++ b/src/gioi-thieu.ejs
@@ -410,7 +410,7 @@
                         <div class="wpb_text_column wpb_content_element  nong_san_tho_text">
                           <div class="wpb_wrapper">
                             <h3>Cơ cấu tổ chức</h3>
-                            <p>Công ty Minh Anh là một công ty cổ phần đầu tư công nghệ với cơ cấu tổ chức chuyên nghiệp và hiệu quả.</p>
+                            <p>Công ty Minh Anh là một công ty cổ phần đầu tư đa ngành với cơ cấu tổ chức chuyên nghiệp và hiệu quả.</p>
                             <p> Hội đồng quản trị chịu trách nhiệm giám sát và định hướng chiến lược phát triển.</p>                          
                             <p>Ban Tổng Giám đốc dẫn dắt công ty với tầm nhìn chiến lược và tinh thần lãnh đạo mạnh mẽ. </p>
                           </br>
