--- a/src/san-pham/nong-san-nguyen-lieu-tho.ejs
+++ b/src/san-pham/nong-san-nguyen-lieu-tho.ejs
@@ -206,12 +206,12 @@
                             <p>Đặc điểm chung:<br />
                               Hàm lượng đạm cao, ít tạp chất, hàm lượng độc tố và vi khuẩn có hại ở mức thấp, nguồn gốc
                               rõ ràng.</p>
-                            <p><strong><img class="aligncenter wp-image-291 size-full"
+                            <!-- <p><strong><img class="aligncenter wp-image-291 size-full"
                                   src="/assets/img/san-pham/2.-Bắp-hạt-e1529390000960.jpg"
-                                  alt="" width="400" height="280" /></strong></p>
+                                  alt="" width="400" height="280" /></strong></p> -->
                             <h3><strong>2. ĐẠM THỰC VẬT</strong></h3>
                             <p><img class="size-full wp-image-732 aligncenter"
-                                src="../assets/img/san-pham/BapHat.jpg"
+                                src="/assets/img/san-pham/BapHat.jpg"
                                 alt="" width="400" height="280" /></p>
                             <p>Với mạng lưới liên kết rộng lớn, chúng tôi đa dạng nhóm sản phẩm đạm thực vật nhằm đáp
                               ứng đúng tiêu chuẩn sản xuất của Nhà máy cùng với mức giá tốt nhất.</p>
