--- a/src/assets/css/index3.css
+++ b/src/assets/css/index3.css
@@ -25083,8 +25083,7 @@ body p {
   }
 
   .chuoi_gia_tri_home_row {
-    padding: 30px 0;
-    padding-bottom: 0
+    padding: 0px 0 30px;
   }
 
   .chuoi_gia_tri_title {
