--- a/src/bat-dong-san.ejs
+++ b/src/bat-dong-san.ejs
@@ -25,7 +25,7 @@
 </head>
 
 <body data-rsssl=1
-  class="page-template page-template-full_width page-template-full_width-php page page-id-97 page-parent  qode_grid_1200 qode-child-theme-ver- qode-theme-ver-13.8 qode-theme-vietacc disabled_footer_bottom wpb-js-composer js-comp-ver-5.4.7 vc_responsive"
+  class="page-project page-template page-template-full_width page-template-full_width-php page page-id-97 page-parent  qode_grid_1200 qode-child-theme-ver- qode-theme-ver-13.8 qode-theme-vietacc disabled_footer_bottom wpb-js-composer js-comp-ver-5.4.7 vc_responsive"
   itemscope itemtype="http://schema.org/WebPage">
   <div class="wrapper">
     <div class="wrapper_inner">
@@ -41,14 +41,14 @@
                 style=' text-align:left;'>
                 <div class=" section_inner clearfix">
                   <div class='section_inner_margin clearfix'>
-                    <div class="wpb_column vc_column_container vc_col-sm-12">
+                    <div class="project-list wpb_column vc_column_container vc_col-sm-12">
                       <div class="vc_column-inner ">
                         <div class="wpb_wrapper">
                           <h2 class="title_header">DỰ ÁN BẤT ĐỘNG SẢN NHÀ ĐẤT VIỆT NAM 2023</h2>
                           <div class="br_line"><img src="/assets/img/bds/line.png" alt="icon line"></div>
                           <div class="services_text"><p style="text-align: justify;">Tổng hợp danh sách các dự án bất động sản, dự án căn hộ chung cư giá rẻ, dự án cao cấp mới nhất 2023. Tại đây <span style="color:#ff0000;"><strong>
                             CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH</strong></span> cung cấp đầy đủ tất cả thông tin về chủ đầu tư dự án, pháp lý, tiến độ xây dựng kèm theo bảng giá bán chi tiết của dự án nhà ở cập nhật mới nhất năm 2023.</p></div>
-                          <div class="row">
+                          <div class="row project-layout">
                             <div class="col-md-4 col-sm-6 col-xs-12">
                               <div class="single-property"> <span>Đang triển khai</span>
                                 <div class="property-img"> <a
