--- a/src/en/project.ejs
+++ b/src/en/project.ejs
@@ -25,7 +25,7 @@
 </head>
 
 <body data-rsssl=1
-  class="page-template page-template-full_width page-template-full_width-php page page-id-97 page-parent  qode_grid_1200 qode-child-theme-ver- qode-theme-ver-13.8 qode-theme-vietacc disabled_footer_bottom wpb-js-composer js-comp-ver-5.4.7 vc_responsive"
+  class="page-project page-template page-template-full_width page-template-full_width-php page page-id-97 page-parent  qode_grid_1200 qode-child-theme-ver- qode-theme-ver-13.8 qode-theme-vietacc disabled_footer_bottom wpb-js-composer js-comp-ver-5.4.7 vc_responsive"
   itemscope itemtype="http://schema.org/WebPage">
   <div class="wrapper">
     <div class="wrapper_inner">
@@ -41,14 +41,14 @@
                 style=' text-align:left;'>
                 <div class=" section_inner clearfix">
                   <div class='section_inner_margin clearfix'>
-                    <div class="wpb_column vc_column_container vc_col-sm-12">
+                    <div class="project-list wpb_column vc_column_container vc_col-sm-12">
                       <div class="vc_column-inner ">
                         <div class="wpb_wrapper">
                           <h2 class="title_header">VIETNAM REAL ESTATE PROJECT 2023</h2>
                           <div class="br_line"><img src="/assets/img/bds/line.png" alt="icon line"></div>
                           <div class="services_text"><p style="text-align: justify;">Compilation of real estate projects, affordable apartment projects, and latest luxury projects in 2023. <span style="color:#ff0000;"><strong>
                             MINH ANH TECHNOLOGY INVESTMENT JOINT STOCK COMPANY</strong></span> provides comprehensive information about the project's investors, legal aspects, construction progress, and detailed price list of the residential project with the latest update in 2023.</p></div>
-                          <div class="row">
+                          <div class="row project-layout">
                             <div class="col-md-4 col-sm-6 col-xs-12">
                               <div class="single-property"> <span>In progress</span>
                                 <div class="property-img"> <a
