--- a/src/bds/minh-anh-park-hill-cu-chi.ejs
+++ b/src/bds/minh-anh-park-hill-cu-chi.ejs
@@ -58,15 +58,80 @@
                 <div class="project-detail">
                   <div class="grid_section">
                     <div class="section_inner">
-                      <p><strong>Dự án</strong><strong>&nbsp;Vinhomes Củ Chi Khu Đô Thị Tây Bắc của Tập Đoàn Vingroup&nbsp;</strong>có diện tích khoảng&nbsp;<strong>6.100 ha</strong>&nbsp;tọa lạc trên địa phận của hai huyện Hóc Môn và Củ Chi thuộc Thành phố Hồ Chí Minh. Cụ thể, <strong>khu đô thị</strong>&nbsp;<strong>Vinhomes Củ Chi</strong>&nbsp;thuộc xã Tân Thới Nhì của huyện Hóc Môn; thuộc xã Tân Phú Trung, xã Tân Thông Hội, xã Tân An Hội, xã Phước Hiệp và thị trấn Củ Chi của huyện Củ Chi. Theo quy hoạch,&nbsp;<strong>Vinhomes Củ Chi</strong>&nbsp;sẽ là dự án tổ hợp dịch vụ, thương mại, y tế, văn hóa, giáo dục đào tạo, thể dục thể thao và nghỉ dưỡng vui chơi giải trí hàng đầu khu vực Tây Bắc Sài Gòn.</p>
-                      <p style="text-align:center"><img alt="" src="http://quybatdongsan.com/images/Vinhomes-C%E1%BB%A7-Chi-19.jpg"></p>
-                      <p style="text-align:center"><span style="font-size:12px"><em>Dự án Đại đô thị Vinhomes Củ Chi</em></span></p>
-                      <h5><span style="color:#0000FF"><strong>I. GIỚI THIỆU&nbsp;DỰ ÁN VINHOMES&nbsp;CỦ CHI</strong></span></h5>
-                      <p>- Tên dự án:&nbsp;<strong>Vinhomes Củ Chi</strong></p>
-                      <p>- Đơn vị xây dựng, thi công: Contecons</p>
-                      <p>- Đơn vị phân phối chính:&nbsp;</p>
-                      <p>- Tổng diện tích: 6.100 ha</p>
-                      <p>- Mật độ xây dựng: 25%</p>
+                      <p><strong>Minh Anh Park Hill</strong> của <strong> Công ty Cổ phần Đầu tư Công nghệ Minh Anh</strong> có diện tích khoảng 2,2 ha tọa lạc trên địa phận xã Hòa Phú, Huyện Củ Chi thuộc Thành phố Hồ Chí Minh. Theo quy hoạch, <strong>Minh Anh Park Hill</strong> sẽ là dự án tổ hợp dịch vụ, thương mại, văn hóa và vui chơi giải trí tại khu vực Tây Bắc Sài Gòn.</p>
+                      <p style="text-align:center"><img alt="" src="/assets/img/bds/minhanh_cuchi_duan.PNG"></p>
+                      <p style="text-align:center"><span style="font-size:12px"><em>Dự án Khu dân cư Minh Anh Park Hill</em></span></p>
+                      <h5><span style="color:#0000FF"><strong>I. GIỚI THIỆU&nbsp;DỰ ÁN MINH ANH PARK HILL</strong></span></h5>
+                        </br>
+                      <p>- Tên dự án:&nbsp;<strong>Minh Anh Park Hill</strong></p>
+                      <p>- Vị trí: Tỉnh lộ 8, xã Hòa Phú, Huyện Củ Chi, Thành phố Hồ Chí Minh, Việt Nam</p>
+                      <p>- Chủ đầu tư: <strong>Công ty Cổ phần Đầu tư Công nghệ Minh Anh</strong></p>
+                      <p>- Đơn vị tư vấn thiết kế: Công ty TNHH Tư vấn Thiết kế Xây dựng Sài Gòn QTK</p>
+                      <p>- Đơn vị phân phối chính: </p>
+                      <p>- Tổng diện tích: 2,2 ha</p>
+                      <p>- Mật độ xây dựng: 40%</p>
+                      <p>- Số lượng nhà phố: 163 căn</p>
+                      <p>- Loại hình sản phẩm đa dạng: từ Khu Nhà liên kế, nhà phố thương mại, shophouse.</p>
+                      <p>- Không gian xanh: khuôn viên cây xanh, tiểu cảnh, hồ nước,…</p>
+                      <p><strong>Ưu điểm vượt trội của Dự án Minh Anh Park Hill:</strong></p>
+                      <p>- Đây là một dòng sản phẩm có giá bán hợp với túi tiền của nhiều dân cư có thu nhập trung bình.</p>
+                      <p>- Chủ đầu tư uy tín, có thương hiệu, tiềm lực tài chính tốt và có kinh nghiệm trong phát triển bất động sản.</p>
+                      <p>- Dù là những nhà liên kế, nhà phố thương mại, shophouse Củ Chi giá thấp hơn so với nhiều dự án khác nhưng về mặt chất lượng và tiện ích cũng được đồng bộ không kém gì những dự án nhà phố, nhà ở cao cấp.</p>
+                      <p style="text-align:center"><img alt="" src="/assets/img/bds/minhanh_cuchi_phoicanh.PNG"></p>
+                      <p style="text-align:center"><span style="font-size:12px"><em>Phối cảnh Dự án Minh Anh park Hill</em></span></p>
+
+
+                      <h5><span style="color:#0000FF"><strong>II. VỊ TRÍ DI CHUYỂN, HỆ THỐNG GIAO THÔNG TẠI CỦ CHI</strong></span></h5>
+                        </br>
+                      <p><strong>Dự án Minh Anh Park Hill</strong> tọa lạc tại tỉnh lộ 8, thuộc khu vực Tây Bắc của TP. Hồ Chí Minh tạo thành trục tam giác vàng TP HCM – Bình Dương – Tây Ninh. Những tuyến đường huyết mạch xung quanh dự án như quốc lộ 1A, Quốc lộ 22, tỉnh lộ 8, đường Võ Văn Bích, tỉnh lộ 9… tạo cho dự án có vị thế đắc địa khi đây là khu vực được quy hoạch mở rộng để sẵn sàng cho việc bùng nổ dân số và hàng loạt tiện ích được xây dựng trong những năm tới nhằm biến Củ Chi thành điểm đến được lựa chọn đầu tiên an cư, đầu tư của các tập đoàn lớn trong và ngoài nước.</p>
+                      <p>Tuy xa trung tâm nhưng <strong>Khu Dân cư Minh Anh Park Hill</strong> lại thuộc khu vực phát triển nhanh chóng, kết cấu hạ tầng dần hoàn thiện đồng bộ đáp ứng đầy đủ nhu cầu đi lại, kinh tế tập trung của tổ hợp công nghiệp.</p>
+                      
+                      
+                      <h5><span style="color:#0000FF"><strong>III. TIỆN ÍCH XUNG QUANH DỰ ÁN MINH ANH PARK HILL</strong></span></h5>
+                        </br>
+                      <p>Theo quy hoạch, nhiều khu giải trí tầm cỡ quốc tế được mở ra tại <strong>Củ Chi</strong>. Hiện tại, khu đô thị Tây Bắc <strong>6.000ha</strong> đang triển khai xây dựng. Công viên Quốc tế Tân Phú Trung quy mô 300ha, làng Đại Học Quốc Tế diện tích 1.000ha tại Tân Phú Trung, Thảo Cầm Viên 500ha tại An Nhơn Tây… và khách sạn, nhà hàng đang mọc ra ngày càng nhiều…</p>
+                      <p style="text-align:center"><img alt="" src="/assets/img/bds/minhanh_cuchi_tienich.PNG"></p>
+                      <p style="text-align:center"><span style="font-size:12px"><em>Tiện ích kết nối khu vực của Minh Anh Park Hill</em></span></p>
+                      <p>Bên cạnh đó, dự kiến sẽ có khoảng 30 trường Đại Học dời về Củ Chi và mỗi trường sẽ cần khoảng 10 đến 30ha đất. Đồng thời với điều đó sẽ có khoảng 30 bệnh viện với quy mô lớn nhỏ khác nhau sẽ được xây dựng mới tại Củ Chi và chỉ có Củ Chi mới đủ diện tích “đất sạch” với cảnh quan phong thủy phù hợp với người Á Đông và tiêu chuẩn quốc tế. Xung quanh là những tiện ích ngoại khu hiện hữu như chợ, siêu thị, trung tâm hành chính, UBND, trung tâm thương mại, siêu thị, trường học, bệnh viện,…Chính vì những tiện nghi “vàng” mà <strong>khu dân cư Minh Anh park Hill </strong> được hưởng lợi trong tương lai</p>
+                      <div class="bg_lienketvung">
+                        <div class="row row-full-width align-middle align-center">
+                          <div style="max-width: 45%;" class="col small-12 large-6 medium-12 p0 left-img">
+                            <div class="img-inner dark">
+                              <a data-fancybox="img-vitri" data-type="image"
+                                href="">
+                                <img class="lazy" width="1200" height="1000"
+                                  src="/assets/img/bds/minhanh_cuchi_lienketvung.png"                                              
+                                  alt="Minh Anh Park Hill Củ Chi" />
+                              </a>
+                            </div>
+                          </div>
+                          <div style="max-width: 45%;" class="col small-12 large-6 medium-12">
+                            <div class="col-inner text-lienketvung"
+                              style="max-width:1000px;margin: 0 auto;">
+                              <p class="title">Liên kết vùng</p>
+                              <ul>
+                                <li><span class="num">1</span> Cách trung tâm Thành Phố 22 KM</li>
+                                <li><span class="num">2</span> Cách trung tâm Thủ Dầu Một 5 KM</li>
+                                <li><span class="num">3</span> Cách ngã tư Tân Quy 3 KM</li>
+                                <li><span class="num">4</span> Cách chợ Hóc Môn 10 KM</li>
+                                <li><span class="num">5</span> Cách Đông Thạnh Quận 12 10 KM</li>
+                                <li><span class="num">6</span> Cách quốc lộ 22 14 KM</li>
+                              </ul>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      
+                      <h5><span style="color:#0000FF"><strong>IV. MẶT BẰNG KHU DÂN CƯ MINH ANH PARK HILL</strong></span></h5>
+                        </br>
+                      <p style="text-align:center"><img alt="" src="/assets/img/bds/minhanh_cuchi_matbang.PNG"></p>
+                      <p style="text-align:center"><span style="font-size:12px"><em>Mặt bằng tổng thể Dự án Minh Anh Park Hill</em></span></p>
+                      <h5><span style="color:#0000FF"><strong>V. GIÁ BÁN KHU DÂN C Ư MINH ANH PARK HILL NHƯ THẾ NÀO?</strong></span></h5>
+                        </br>
+                      <p>Quỹ đất rộng lớn nên giá đất nền Củ Chi hiện tại ở mức rẻ và hợp lý của Thành Phố Hồ Chí Minh.</p>
+                      <p>Bên cạnh đó, đối tượng khách hàng mà chủ đầu tư <strong>Minh Anh Group</strong> hướng đến là những cư dân trung cấp có mức thu nhập bình quân từ 13 – 15 triệu/hàng tháng nên mức giá dự kiến mà chủ đầu tư <strong>Minh Anh Group</strong> mang đến sẽ vô cùng hấp dẫn.</p>
+
+                      <p>Chính sách hỗ trợ và các ưu đãi khi khách hàng lựa chọn <strong>Minh Anh Park Hill</strong> cũng sẽ được chủ đầu tư chú trọng để cư dân có thể tìm được một nơi an cư tốt nhất.</p>
                     </div>
                   </div>
                 </div>
